hots/src/components/Banner/Banner.css
.banner {
  position: relative;
  top: 0;
  width: 100%;
  height: 700px;
  overflow: hidden;
  display: flex;
  justify-content: center;
  background: #111;
}

.banner video {
  left: 0;
  width: 2400px;
  position: absolute;
  z-index: 0;
  animation-name: opacity1;
  animation-duration: 600ms;
}

.call-to-action {
  position: absolute;
  width: 75%;
  top: 250px;
}

.call-to-action h1 {
  font-size: 2.4rem;
  text-shadow: 0px 0px 25px black;
}

.call-to-action p {
  font-size: 1.5rem;
  margin-bottom: 80px;
  text-shadow: 0px 0px 25px black;
  width: 500px;
}

.call-to-action a {
  position: relative;
  bottom: 0;
  padding: 17px 60px;
  background: rgb(255, 165, 0);
  background: linear-gradient(180deg, #ff9500 0%, #f50 100%);
  text-shadow: 0px 2px 10px black;
  box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.664);
}

.dots {
  position: absolute;
  bottom: 0;
  display: none;
  width: 100%;
  justify-content: center;
}

.dot {
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background: white;
  margin: 25px 15px;
  box-shadow: 0px 0px 10px black;
  cursor: pointer;
  padding: 10px;
}

.dot.dot-active {
  background: #ff9500;
}

@media screen and (max-width: 960px) {
  .banner video {
    display: none;
  }

  .banner {
    background: url("/images/backgrounds/deathwing-bg.jpg") no-repeat center
      center/cover;
  }

  .call-to-action {
    width: 90%;
  }

  .call-to-action p {
    font-size: 1.5rem;
    margin-bottom: 80px;
    text-shadow: 0px 0px 10px black;
    width: 100%;
  }
}

